--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GitHub Emojies</title>
-  <meta name="description" content="A list of GitHub emojies with their names and images." />
+  <title>GitHub Emojis</title>
+  <meta name="description" content="A list of GitHub emojis with their names and images." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="favicon/github.png" media="(prefers-color-scheme: light)" />
   <link rel="icon" type="image/png" href="favicon/github-dark.png" media="(prefers-color-scheme: dark)" />
@@ -14,8 +14,8 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: "GitHub Emojies",
-      repo: "piecioshka/github-emojies",
+      name: "GitHub Emojis",
+      repo: "piecioshka/github-emojis",
       themeColor: "#43576b",
       hideSidebar: true,
     };
